<resources>
    <string name="app_name">Travel Rec System</string>
    <string name="search_keyword">Search keyword</string>
    <string name="search_here">Search here</string>
    <string name="search">Search</string>
    <!-- services -->
    <string name="room">Room</string>
    <string name="price">Price</string>
    <string name="staff">Staff</string>
    <string name="service">Service</string>
    <string name="food">Food</string>
    <string name="hotel">Hotel</string>
    <string name="historical_places">Historical places</string>
    <string name="beach">Beach</string>
    <string name="water_park">Water park</string>

    <!-- services -->
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter email</string>
    <string name="prompt_password">Enter password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="view_details">View details</string>
    <string name="all_aspects">All aspects</string>
</resources>
