<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/login_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/lblSearch"
              android:text="@string/search_keyword" app:layout_constraintTop_toTopOf="parent"
              android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp" android:textColor="@android:color/black" android:textStyle="bold"/>

    <EditText android:layout_width="match_parent" app:layout_constraintTop_toBottomOf="@id/lblSearch"
              android:textColorHint="@android:color/black"
              android:layout_height="wrap_content" android:id="@+id/txtSearch" android:layout_marginTop="16dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
              android:hint="@string/search_here" android:inputType="text"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtSearch" android:id="@+id/btnSearch"
            android:text="@string/search" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>